RESOLVED FIXED175620
[WebCrypto] Push WorkQueue dispatches for HKDF, HMAC, PBKDF2 algorithms into shared code
https://bugs.webkit.org/show_bug.cgi?id=175620
Summary [WebCrypto] Push WorkQueue dispatches for HKDF, HMAC, PBKDF2 algorithms into ...
Zan Dobersek
Reported 2017-08-15 21:57:15 PDT
SSIA.
Attachments
WIP patch (24.26 KB, patch)
2017-08-15 22:06 PDT, Zan Dobersek
no flags
WIP patch (36.04 KB, patch)
2017-08-16 07:45 PDT, Zan Dobersek
no flags
Patch (37.40 KB, patch)
2017-08-18 00:12 PDT, Zan Dobersek
no flags
Patch (36.18 KB, patch)
2017-08-21 04:20 PDT, Zan Dobersek
no flags
Patch (31.95 KB, patch)
2017-08-25 01:19 PDT, Zan Dobersek
no flags
Patch for landing (31.97 KB, patch)
2017-08-29 00:54 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2017-08-15 22:06:41 PDT
Created attachment 318229 [details] WIP patch
Build Bot
Comment 2 2017-08-15 22:08:23 PDT
Attachment 318229 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zan Dobersek
Comment 3 2017-08-16 07:45:27 PDT
Created attachment 318259 [details] WIP patch
Build Bot
Comment 4 2017-08-16 07:47:12 PDT
Attachment 318259 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zan Dobersek
Comment 5 2017-08-18 00:12:22 PDT
Created attachment 318482 [details] Patch Ready for review.
Zan Dobersek
Comment 6 2017-08-21 04:20:09 PDT
Zan Dobersek
Comment 7 2017-08-25 01:19:34 PDT
Jiewen Tan
Comment 8 2017-08-28 12:16:59 PDT
Comment on attachment 319070 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=319070&action=review Looks good to me. r=me. Good job. > Source/WebCore/crypto/mac/CryptoAlgorithmHMACMac.cpp:102 > + return signature.size() == expectedSignature.size() && !constantTimeMemcmp(expectedSignature.data(), signature.data(), expectedSignature.size()); Forget to copy a comment here.
Zan Dobersek
Comment 9 2017-08-29 00:54:11 PDT
Created attachment 319248 [details] Patch for landing
Zan Dobersek
Comment 10 2017-08-29 04:30:51 PDT
Comment on attachment 319248 [details] Patch for landing Clearing flags on attachment: 319248 Committed r221294: <http://trac.webkit.org/changeset/221294>
Zan Dobersek
Comment 11 2017-08-29 04:30:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12 2017-08-29 04:31:31 PDT
Note You need to log in before you can comment on or make changes to this bug.