Source/WebCore/crypto/gcrypt/CryptoAlgorithmHMACGCrypt.cpp
@@ -32,7 +32,6 @@
 #if ENABLE(SUBTLE_CRYPTO)
 
 #include "CryptoKeyHMAC.h"
-#include "ScriptExecutionContext.h"
 #include <pal/crypto/gcrypt/Handle.h>
 #include <wtf/CryptographicUtilities.h>
 
@@ -83,56 +82,33 @@ static std::optional<Vector<uint8_t>> calculateSignature(int algorithm, const Ve
     return WTFMove(signature);
 }
 
-void CryptoAlgorithmHMAC::platformSign(Ref<CryptoKey>&& key, Vector<uint8_t>&& data, VectorCallback&& callback, ExceptionCallback&& exceptionCallback, ScriptExecutionContext& context, WorkQueue& workQueue)
+ExceptionOr<Vector<uint8_t>> CryptoAlgorithmHMAC::platformSign(const CryptoKey& key, const Vector<uint8_t>& data)
 {
-    context.ref();
-    workQueue.dispatch([key = WTFMove(key), data = WTFMove(data), callback = WTFMove(callback), exceptionCallback = WTFMove(exceptionCallback), &context]() mutable {
-        auto& hmacKey = downcast<CryptoKeyHMAC>(key.get());
-        auto algorithm = getGCryptDigestAlgorithm(hmacKey.hashAlgorithmIdentifier());
-        if (algorithm != GCRY_MAC_NONE) {
-            auto result = calculateSignature(algorithm, hmacKey.key(), data.data(), data.size());
-            if (result) {
-                // We should only dereference callbacks after being back to the Document/Worker threads.
-                context.postTask([callback = WTFMove(callback), result = WTFMove(*result), exceptionCallback = WTFMove(exceptionCallback)](ScriptExecutionContext& context) {
-                    callback(result);
-                    context.deref();
-                });
-                return;
-            }
-        }
-        // We should only dereference callbacks after being back to the Document/Worker threads.
-        context.postTask([exceptionCallback = WTFMove(exceptionCallback), callback = WTFMove(callback)](ScriptExecutionContext& context) {
-            exceptionCallback(OperationError);
-            context.deref();
-        });
-    });
+    auto& hmacKey = downcast<CryptoKeyHMAC>(key);
+
+    auto algorithm = getGCryptDigestAlgorithm(hmacKey.hashAlgorithmIdentifier());
+    if (algorithm == GCRY_MAC_NONE)
+        return Exception { OperationError };
+
+    auto result = calculateSignature(algorithm, hmacKey.key(), data.data(), data.size());
+    if (!result)
+        return Exception { OperationError };
+    return WTFMove(*result);
 }
 
-void CryptoAlgorithmHMAC::platformVerify(Ref<CryptoKey>&& key, Vector<uint8_t>&& signature, Vector<uint8_t>&& data, BoolCallback&& callback, ExceptionCallback&& exceptionCallback, ScriptExecutionContext& context, WorkQueue& workQueue)
+ExceptionOr<bool> CryptoAlgorithmHMAC::platformVerify(const CryptoKey& key, const Vector<uint8_t>& signature, const Vector<uint8_t>& data)
 {
-    context.ref();
-    workQueue.dispatch([key = WTFMove(key), signature = WTFMove(signature), data = WTFMove(data), callback = WTFMove(callback), exceptionCallback = WTFMove(exceptionCallback), &context]() mutable {
-        auto& hmacKey = downcast<CryptoKeyHMAC>(key.get());
-        auto algorithm = getGCryptDigestAlgorithm(hmacKey.hashAlgorithmIdentifier());
-        if (algorithm != GCRY_MAC_NONE) {
-            auto expectedSignature = calculateSignature(algorithm, hmacKey.key(), data.data(), data.size());
-            if (expectedSignature) {
-                // Using a constant time comparison to prevent timing attacks.
-                bool result = signature.size() == expectedSignature->size() && !constantTimeMemcmp(expectedSignature->data(), signature.data(), expectedSignature->size());
-                // We should only dereference callbacks after being back to the Document/Worker threads.
-                context.postTask([callback = WTFMove(callback), result, exceptionCallback = WTFMove(exceptionCallback)](ScriptExecutionContext& context) {
-                    callback(result);
-                    context.deref();
-                });
-                return;
-            }
-        }
-        // We should only dereference callbacks after being back to the Document/Worker threads.
-        context.postTask([exceptionCallback = WTFMove(exceptionCallback), callback = WTFMove(callback)](ScriptExecutionContext& context) {
-            exceptionCallback(OperationError);
-            context.deref();
-        });
-    });
+    auto& hmacKey = downcast<CryptoKeyHMAC>(key);
+
+    auto algorithm = getGCryptDigestAlgorithm(hmacKey.hashAlgorithmIdentifier());
+    if (algorithm == GCRY_MAC_NONE)
+        return Exception { OperationError };
+
+    auto expectedSignature = calculateSignature(algorithm, hmacKey.key(), data.data(), data.size());
+    if (!expectedSignature)
+        return Exception { OperationError };
+    // Using a constant time comparison to prevent timing attacks.
+    return signature.size() == expectedSignature->size() && !constantTimeMemcmp(expectedSignature->data(), signature.data(), expectedSignature->size());
 }
 
 }
